adicionando 2 novos certificados

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -58,6 +58,7 @@
   "skill_name_swagger": "Swagger",
   "skill_name_postman": "Postman",
   "skill_name_postgresql": "PostgreSQL",
+  "skill_name_maven": "Maven",
   "skill_name_mysql": "MySQL",
   "skill_name_mariadb": "MariaDB",
   "skill_name_mongodb": "MongoDB",
@@ -245,6 +246,12 @@
   "cert_easy_title": "English Course Completion Certificate",
   "cert_easy_desc": "Completion of the Advanced II cycle of the CLASSIC English course at the institution.",
   "cert_easy_issuer": "Inglês Easy",
+  "cert_ufpe_no_mercado_2024_title": "UFPE Job Market Fair 2024",
+  "cert_ufpe_no_mercado_2024_desc": "Participation in UFPE Job Market Fair 2024, at the Federal University of Pernambuco. Connects students with job opportunities through booths from leading companies, fostering professional growth.",
+  "cert_ufpe_no_mercado_2024_issuer": "A.C.E Consulting, Porto Digital & Sebrae",
+  "cert_upe_destaca_title": "UPE Highlights 2025",
+  "cert_upe_destaca_desc": "Participation in UPE Highlights 2025, organized by FCAP JR and Sebrae. Connects students with companies and professionals for two days of hands-on learning, recruiter interactions, and internship/trainee opportunities.",
+  "cert_upe_destaca_issuer": "Sebrae",
   "ggabs_title": "GGABS TECH & DESIGN",
   "ggabs_subtitle": "My independent digital solutions agency",
   "ggabs_description": "GGABS Tech & Design is an independent agency specializing in tailored digital solutions. We operate at the intersection of technology and design to create unique, functional, and visually impactful experiences.",
