--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -80,6 +80,7 @@
   "skill_name_githubactions": "Github actions",
   "skill_name_pytest": "Pytest",
   "skill_name_jest": "Jest",
+  "skill_name_maven": "Maven",
   "skill_name_apidog": "Apidog",
   "skill_name_render": "Render",
   "skill_name_railway": "Railway",
@@ -245,6 +246,12 @@
   "cert_easy_title": "Certificado de Conclusão do Curso de Inglês",
   "cert_easy_desc": "Conclusão do ciclo Avançado II do curso de Inglês CLASSIC na instituição.",
   "cert_easy_issuer": "Inglês Easy",
+  "cert_ufpe_no_mercado_2024_title": "UFPE no Mercado 2024",
+  "cert_ufpe_no_mercado_2024_desc": "Participação na Feira UFPE no Mercado 2024, da Universidade Federal de Pernambuco. Conecta estudantes a oportunidades de trabalho, com estandes de grandes empresas, promovendo desenvolvimento profissional.",
+  "cert_ufpe_no_mercado_2024_issuer": "A.C.E Consultoria, Porto Digital e Sebrae",
+  "cert_upe_destaca_title": "UPE Destaca 2025",
+  "cert_upe_destaca_desc": "Participação no UPE Destaca 2025, organizado pela FCAP JR e Sebrae. O evento conecta estudantes a empresas e profissionais, com dois dias de aprendizado prático, interação com recrutadores e oportunidades de estágio e trainee.",
+  "cert_upe_destaca_issuer": "Sebrae",
   "ggabs_title": "GGABS TECH & DESIGN",
   "ggabs_subtitle": "Minha agência independente de soluções digitais",
   "ggabs_description": "A GGABS Tech & Design é uma agência independente especializada em soluções digitais sob medida. Atuamos na interseção entre tecnologia e design para desenvolver experiências únicas, funcionais e visualmente impactantes.",
