Adicionando novo certificado e atualizando tecnologias

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -65,7 +65,7 @@
   "skill_name_git": "Git",
   "skill_name_github": "Github",
   "skill_name_docker": "Docker",
-  "skill_name_grafana": "Grafana",
+  "skill_name_nestjs": "NestJS",
   "skill_name_vercel": "Vercel",
   "skill_name_figma": "Figma",
   "skill_name_canva": "Canva",
@@ -76,7 +76,7 @@
   "skill_name_shadcn": "Shadcn/ui",
   "skill_name_chakraui": "Chakra UI",
   "skill_name_sequelize": "Sequelize",
-  "skill_name_terraform": "Terraform",
+  "skill_name_kubernetes": "Kubernetes",
   "skill_name_jenkins": "Jenkins",
   "skill_name_githubactions": "Github actions",
   "skill_name_pytest": "Pytest",
@@ -252,6 +252,9 @@
   "cert_upe_destaca_title": "UPE Highlights 2025",
   "cert_upe_destaca_desc": "Participation in UPE Highlights 2025, organized by FCAP JR and Sebrae. Connects students with companies and professionals for two days of hands-on learning, recruiter interactions, and internship/trainee opportunities.",
   "cert_upe_destaca_issuer": "Sebrae",
+  "cert_hackaton_bbts_title": "Hackaton'Play BBTS",
+  "cert_hackaton_bbts_desc": "Participation in the Hackaton'Play BBTS as a member of the 'MangueDevs' team, where we developed a functional MVP focused on AI to optimize BBTS's product logistics and acquisition cycle. The project focused on generating predictive insights, demonstrating innovation and the ability to deliver under pressure.",
+  "cert_hackaton_bbts_issuer": "BB Tecnologia e Serviços",
   "ggabs_title": "GGABS TECH & DESIGN",
   "ggabs_subtitle": "My independent digital solutions agency",
   "ggabs_description": "GGABS Tech & Design is an independent agency specializing in tailored digital solutions. We operate at the intersection of technology and design to create unique, functional, and visually impactful experiences.",
