--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -63,19 +63,18 @@
   "skill_name_git": "Git",
   "skill_name_github": "Github",
   "skill_name_docker": "Docker",
-  "skill_name_grafana": "Grafana",
   "skill_name_vercel": "Vercel",
   "skill_name_figma": "Figma",
   "skill_name_canva": "Canva",
   "skill_name_trello": "Trello",
   "skill_name_notion": "Notion",
   "skill_name_jira": "Jira",
-  "skill_name_flask": "Flask",
+  "skill_name_nestjs": "NestJS",
   "skill_name_fastapi": "FastAPI",
   "skill_name_shadcn": "Shadcn/ui",
   "skill_name_chakraui": "Chakra UI",
   "skill_name_sequelize": "Sequelize",
-  "skill_name_terraform": "Terraform",
+  "skill_name_kubernetes": "Kubernetes",
   "skill_name_jenkins": "Jenkins",
   "skill_name_githubactions": "Github actions",
   "skill_name_pytest": "Pytest",
@@ -252,6 +251,9 @@
   "cert_upe_destaca_title": "UPE Destaca 2025",
   "cert_upe_destaca_desc": "Participação no UPE Destaca 2025, organizado pela FCAP JR e Sebrae. O evento conecta estudantes a empresas e profissionais, com dois dias de aprendizado prático, interação com recrutadores e oportunidades de estágio e trainee.",
   "cert_upe_destaca_issuer": "Sebrae",
+  "cert_hackaton_bbts_title": "Hackaton'Play BBTS",
+  "cert_hackaton_bbts_desc": "Participação no Hackaton'Play BBTS como membro do time 'MangueDevs', desenvolvemos um MVP funcional com foco em IA para otimizar o ciclo logístico e de aquisição de produtos da BBTS. Projeto focado em gerar insights preditivos, demonstrando capacidade de inovação e entrega sob pressão.",
+  "cert_hackaton_bbts_issuer": "BB Tecnologia e Serviços",
   "ggabs_title": "GGABS TECH & DESIGN",
   "ggabs_subtitle": "Minha agência independente de soluções digitais",
   "ggabs_description": "A GGABS Tech & Design é uma agência independente especializada em soluções digitais sob medida. Atuamos na interseção entre tecnologia e design para desenvolver experiências únicas, funcionais e visualmente impactantes.",
